src/app/templates/shared/modal/modal.component.scss
modal {
  display: none;

  .modal {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 9902;
    overflow: auto;

    .modal-body {
      padding: 20px;
      background: #fff;
      margin: 5rem;
    }
  }

  .modal-background {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: #000;
    opacity: 0.75;
    z-index: 9901;
  }
}

body.modal-open {
  overflow: hidden;
}

